--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,15 @@ body {
 #play_ment{
   width: 60%;
 }
-
+.eye-wrap {
+  position: relative;
+  width: 100%;
+  overflow: hidden;   
+}
+.eye-mask {
+  position: relative;
+  width: 100%;
+}
 .eyes {
   display: flex;
   flex-direction: row;
@@ -52,11 +60,77 @@ body {
   animation: eyesDown 0.8s ease-in-out 1.5s forwards;
 }
 .eye {
-  width: 100%;
+ width: 100%;
   height: auto;
+  display: block;
+  position: relative;
+  z-index: 1;
 }
 
+
+
+
+
+
+
 /* --- 애니메이션 정의 --- */
+
+.eyelid {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: auto;
+  pointer-events: none;
+  z-index: 2;
+}
+
+/* 위 눈꺼풀 */
+.eyelid-up {
+  top: 0;
+  transform: translateY(-100%);              
+  animation: eyelidUpBlink 0.8s ease-in-out 0.6s forwards;
+}
+
+/* 아래 눈꺼풀 */
+.eyelid-down {
+  bottom: 0;
+  transform: translateY(100%);         
+  animation: eyelidDownBlink 0.8s ease-in-out 0.6s forwards;
+}
+
+/* 위 눈꺼풀 애니메이션*/
+@keyframes eyelidUpBlink {
+  0% {
+    transform: translateY(-100%);
+  }
+  35% {
+    transform: translateY(0);     
+  }
+  65% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);   
+  }
+}
+
+/* 아래 눈꺼풀 애니메이션*/
+@keyframes eyelidDownBlink {
+  0% {
+    transform: translateY(100%);
+  }
+  35% {
+    transform: translateY(0);     
+  }
+  65% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(100%); 
+  }
+}
+
+
 @keyframes titleBlockDrop {
   0% {
     opacity: 0;
@@ -78,7 +152,7 @@ body {
   }
 }
 
-/* Blink! 흔들림 (중간 멈춤 포함) */
+/* Blink! 흔들림 */
 @keyframes titleWiggle {
   0%, 70%, 100% {
     transform: translate(0, 0) rotate(0deg) scale(1);
