--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,16 @@ body {
 .eye-mask {
   position: relative;
   width: 100%;
+  -webkit-mask-image: url("../image/love/white_shape.svg");
+  mask-image: url("../image/love/white_shape.svg");
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
 }
+
 .eyes {
   display: flex;
   flex-direction: row;
